# me433

./: README.md
blink/: blink.c
hw10/me433_board/: #auto_saved_files#  fp-info-cache  fp-lib-table  me433.kicad_sym  me433_board.kicad_pcb  me433_board.kicad_prl  me433_board.kicad_pro  me433_board.kicad_sch  sym-lib-table  ~me433_board.kicad_pcb.lck
hw10/me433_board/gerbers/: me433_board-B_Cu.gbr  me433_board-B_Mask.gbr  me433_board-B_Paste.gbr  me433_board-B_Silkscreen.gbr  me433_board-Edge_Cuts.gbr  me433_board-F_Cu.gbr  me433_board-F_Mask.gbr  me433_board-F_Paste.gbr  me433_board-F_Silkscreen.gbr  me433_board-NPTH.drl  (+2 more)
hw12/: CMakeLists.txt
hw12/hw12/: CMakeLists.txt  hw12.c
hw14/: hw14_p4.py  hw14_p5.py  hw14_p6.py  hw14_p7.py  hw14_p7_helper.py
hw14/examples/: python_csv.py
hw15/: camera_mount.SLDPRT  side_bracket.SLDPRT  side_bracket_v1.SLDPRT  side_bracket_v1.STL  side_bracket_v1.gcode.3mf  side_bracket_v1_0.4n_0.2mm_PETG_MINI_17m.bgcode  wheel.SLDPRT
hw15/print_files/: camera_mount.STL  side_bracket_v1.STL  wheel.STL
hw16/: CMakeLists.txt
hw16/hw16/: CMakeLists.txt  hw16.c
hw3/: CMakeLists.txt  pico_sdk_import.cmake
hw3/blink/: blink.c
hw3/hw3/: CMakeLists.txt  hw3.c
hw4/: CMakeLists.txt
hw4/bme280_spi/: CMakeLists.txt
hw4/hw4/: CMakeLists.txt  hw4.c  hw4.h
hw5/: CMakeLists.txt
hw5/hw5/: CMakeLists.txt  hw5.c
hw6/: CMakeLists.txt
hw6/hw6/: CMakeLists.txt  hw6.c
hw7/: CMakeLists.txt  pico_sdk_import.cmake
hw7/hw7/: CMakeLists.txt  hw7.c
hw8/: rpiZero_info.txt
hw9/: CMakeLists.txt
hw9/hw9/: CMakeLists.txt  hw9.c
(+1 files in other folders)
